{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 123,
  "lineage": "aa0fc279-78fe-4600-1810-304ed9f7561d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac80df6eff0e70b5",
            "arn": "arn:aws:ec2:us-east-1:049509476725:instance/i-0554d97ca663b2287",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0554d97ca663b2287",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aula-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-086ffbe68e1a353db",
            "private_dns": "ip-172-31-74-28.ec2.internal",
            "private_ip": "172.31.74.28",
            "public_dns": "ec2-34-201-174-85.compute-1.amazonaws.com",
            "public_ip": "34.201.174.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0397e1aeb58624158",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_web_egress",
              "sg_web_ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-778fa349",
            "tags": {
              "Name": "aplicacao"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e0b0bcd42bd8011",
              "sg-0b1da6b21a3682040"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.web_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac80df6eff0e70b5",
            "arn": "arn:aws:ec2:us-east-1:049509476725:instance/i-07cf2fe8b86ec0c0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cf2fe8b86ec0c0f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aula-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041821f74e061107c",
            "private_dns": "ip-172-31-68-124.ec2.internal",
            "private_ip": "172.31.68.124",
            "public_dns": "ec2-100-25-153-194.compute-1.amazonaws.com",
            "public_ip": "100.25.153.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0063fb8d14675c2e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_postgres",
              "sg_web_egress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-778fa349",
            "tags": {
              "Name": "db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e0b0bcd42bd8011",
              "sg-08d11a1ee5b650214"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_postgres",
            "aws_security_group.web_egress"
          ]
        }
      ]
    },
    {
      "module": "module.s3",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-0303e36cab91c0242",
            "tags": {
              "Name": "main_gateway"
            },
            "vpc_id": "gw_id"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049509476725:security-group/sg-0b1da6b21a3682040",
            "description": "Permite trafego de entrada HTTP",
            "egress": [],
            "id": "sg-0b1da6b21a3682040",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Entrada HTTP de qualquer lugar",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sg_web_ingress",
            "name_prefix": null,
            "owner_id": "049509476725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-d65a6eac"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_postgres",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049509476725:security-group/sg-08d11a1ee5b650214",
            "description": "Permite que as maquinas do sg_web_ingress conectem no Postgres",
            "egress": [],
            "id": "sg-08d11a1ee5b650214",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acesso Postgres a partir do sg_web_ingress",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1da6b21a3682040"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sg_postgres",
            "name_prefix": null,
            "owner_id": "049509476725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_postgres"
            },
            "timeouts": null,
            "vpc_id": "vpc-d65a6eac"
          },
          "dependencies": [
            "aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049509476725:security-group/sg-0c382aeb10de978bb",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-0c382aeb10de978bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.200.95.158/32"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_aula_ssh",
            "name_prefix": null,
            "owner_id": "049509476725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-d65a6eac"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049509476725:security-group/sg-03e0b0bcd42bd8011",
            "description": "Permite trafego de saida para internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e0b0bcd42bd8011",
            "ingress": [],
            "name": "sg_web_egress",
            "name_prefix": null,
            "owner_id": "049509476725",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-d65a6eac"
          }
        }
      ]
    }
  ]
}